
ChangeLog
 [ + added, - removed, * changed ]
 * 19Nov2015 Added overhead section in the user guide using the overhead
               tests in a variety of systems.
 * 18Nov2015 Changed calls to MPI_Comm_compare in Trace_MPI_Communicator (mpi_wrapper.c) into PMPI_Comm_compare so as not to intercept those calls
 * 16Nov2015 Fix extra comma in papi_best_set
             Upgrade OMPT instrumentation
             Fix #pragma omp taskgroup instrumentation
 * 10Nov2015 Fix unfinished states due to the last event/state and improve
               messaging
 * 09Nov2015 Fix label for MPI_Ibarrier (shown as MPI_Ibcast)
 * 03Nov2015 Fix state generation for several new MPI calls (backported from 3.2.1)
 * 02Nov2015 Extended Java instrumentation through AspectJ and JVMTI
             Added $EXTRAE_HOME/bin/extreaj launcher for Java apps
             Added new examples in JAVA directory
                manual/  --> instrumentation without AspectJ
                automatic/-> instrumentation with AspectJ
 * 30Oct2015 Extrae 3.2.0 released!
             Fix compilation of extrae-cmd in BG/* if PAPI is not set
             Fix compilation in an other directory rather than $top_src_dir
 * 27Oct2015 Free buffer when pthread routine finishes, not at pthread_join time
             Move MPI_FINALIZE_EV so that it covers instrumentation code
 * 23Oct2015 Waste some CPU time in mpi_ping example for use with extrae_bursts_1ms.xml
             Fix timing Extrae check
 * 22Oct2015 Improved "make check". Added -without-addresses to mpi2prv to ignore addresses
 * 21Oct2015 Fixed visibility of the on-line API routines that are called from the wrappers
             Fix example installation. Use cp instead of ln -s.
             Fix Java compilation in other place rather than extract dir
             Fix configured.sh when building in a directory other than extraction dir
 * 15Oct2015 Code adapted to use Synapse libraries v2.0 instead of the older version libMRNetApp