@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 23Nov2015 Guess location for EXTRAE_HOME based on the configured.sh script
  * 19Nov2015 Added overhead section in the user guide using the overhead
                tests in a variety of systems.
  * 18Nov2015 Changed calls to MPI_Comm_compare in Trace_MPI_Communicator (mpi_wrapper.c) into PMPI_Comm_compare so as not to intercept those calls
